<resources>
    <string name="app_name">Virtual Queue</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Create new user</string>
    <string name="guest_login_button">Login as Guest</string>
    <string name="password_2_hint">Re-Enter Password</string>
    <string name="user_text">User</string>
    <string name="business_text">Business</string>
    <string name="continue_button">Continue</string>
    <array name="category">
        <item>Hotel</item>
        <item>Office</item>
        <item>Shop</item>
        <item>Bank</item>
        <item>Hospital</item>
        <item>Others</item>
    </array>
    <array name="type_shop">
        <item>Super market</item>
        <item>Bakery</item>
        <item>General stores</item>
        <item>Fruits and veg</item>
        <item>Ladies stores</item>
        <item>Electrical shop</item>
        <item>Medical stores</item>
        <item>Fish shop</item>
        <item>Furniture</item>
        <item>Crockery shop</item>
        <item>Saloon</item>
        <item>Textile</item>
        <item>Kids ware</item>
        <item>Flowers</item>
        <item>Hardware shop</item>
        <item>Stationary</item>
        <item>Stationary</item>
        <item>Medical Store</item>
    </array>
    <array name="type_hotel">
        <item>Vegetarian</item>
        <item>Non-Veg</item>
        <item>veg and non-veg</item>
    </array>

    <array name="type_hospital">
        <item>Homeo Hospital</item>
        <item>Dental Hospital</item>
        <item>ENT</item>
        <item>General</item>
        <item>Ayurvedic Hospital</item>
        <item>Skin</item>
        <item>Ophthalmologist</item>
        <item>Allopathic</item>
        <item>IVF Hospital</item>
        <item>De addiction-center</item>
        <item>De addiction-center</item>
        <item>Physiotherapy</item>
        <item>Brain and spine Hospital</item>
        <item>Palliative care center</item>
        <item>Yunani Hospitals</item>
        <item>Ortho Hospital</item>
    </array>
    <array name="type_bank">
        <item>central Bank</item>
        <item>Commercial Bank</item>
        <item>Shadow Bank</item>
        <item>Investment Bank</item>
        <item>Cooperative Bank</item>
        <item>Credit Union</item>
    </array>

    <array name="type_office">
        <item>Krishi Bhavans</item>
        <item>College Offices</item>
        <item>Village Offices</item>
        <item>KSEB</item>
        <item>Sub Registration office</item>
        <item>Post Office</item>

    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>